--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,6 @@
-PORT = 5000
-MONGODB_CONNECTION = 'mongodb+srv://Narendra:92eDGr7cICFov9b2@cluster0.ujx5mxm.mongodb.net/test?authSource=admin&replicaSet=atlas-4mf8ni-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true'
-JWTKEY = "namo"
+PORT=5000
+MONGODB_CONNECTION=mongodb+srv://Gaurav:daJAMYusOQrbCBbh@cluster0.7djnipu.mongodb.net/?appName=Cluster0
+JWTKEY=namo
+#PORT = 5000
+#MONGODB_CONNECTION = 'mongodb+srv://Narendra:92eDGr7cICFov9b2@cluster0.ujx5mxm.mongodb.net/test?authSource=admin&replicaSet=atlas-4mf8ni-shard-0&readPreference=primary&appname=MongoDB%20Compass&ssl=true'
+#JWTKEY = "namo"
