--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,1 +1,1 @@
-REACT_APP_PUBLIC_FOLDER = http://localhost:5000/images/
+REACT_APP_PUBLIC_FOLDER = http://a3380184c153e4268b9d0ddc63b9d7db-184651913.ap-south-1.elb.amazonaws.com/images/
